# kandown

./: .gitignore  DEV.md  FRONTEND_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  JS_IMPROVEMENTS_DETAILED.md  README.md  REVIEW_SUMMARY.md  TASK_COMPLETION.md  backlog.yaml  pyproject.toml  sample.md
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  deploy-demo.yml  deploy-page.yml  pypi-release.yml
demo/: .gitignore  README.md  api-filesystem.js  api.js  example.yaml  index.html  settings-demo.js
demo/api/: health
docs/: DEMO_MODE.md  DEMO_MODE_INTEGRATION.md  FILESYSTEM_MODE.md
examples/: before-after-examples.md  improved-styles.css  modal-manager.js  task-renderer.js
experimental/: README.md
experimental/src/: board.css  editor.html  index.html  main.css  main.py  pyscript.json
experimental/src/libs/: puepy-0.6.5-py3-none-any.whl
gh_pages/: .gitignore  PuePy.md  README.md
gh_pages/src/: index.html  main.css  main.py
scripts/: build_demo.py  build_page.py  clean_demo.py  clean_page.py  serve_demo.py  serve_page.py
src/kandown/: app.py  board.py  cli.py  models.py  request_models.py  task_repo.py
src/kandown/statics/: api-cli.js  api-demo.js  api-filesystem.js  api-local-storage.js  api.js  board.css  board.js  board.py  init.js  settings.js  types.js  visibility.css
src/kandown/templates/: index.html  kanban.html  kanban_py.html
tests/: conftest.py  test_demo_mode.py  test_e2e.py  test_health.py  test_init.py  test_page_mode.py  test_task_repo.py  test_url_parameter.py
